@@ -1,3 +1,4 @@
+* #2714 sugar.graphics cleanup (morgs)
 * #2578 German translation (morgs)
 
 13
